chore: 기존 작업 및 feat: 답변부분구현